# purestore

./: Justfile  README.md  meson.build  meson_options.txt  version.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-flatpak.yml
build-aux/flatpak/: io.github.pureblueos.purebazaar.json  io.github.pureblueos.purestore.json
data/: io.github.kolunmi.Bazaar.metainfo.xml.in  io.github.pureblue_os.purebazaar.gschema.xml  io.github.pureblueos.purebazaar.desktop.in  io.github.pureblueos.purebazaar.gschema.xml  io.github.pureblueos.purebazaar.metainfo.xml.in  io.github.pureblueos.purebazaar.search-provider.ini.in  io.github.pureblueos.purebazaar.service.in  io.github.pureblueos.purestore.desktop.in  io.github.pureblueos.purestore.gschema.xml  io.github.pureblueos.purestore.metainfo.xml.in  io.github.pureblueos.purestore.search-provider.ini.in  io.github.pureblueos.purestore.service.in  meson.build
data/dbus/: io.github.pureblueos.purebazaar.service.in  io.github.pureblueos.purestore.service.in  meson.build
data/icons/: meson.build
po/: .gitignore  POTFILES.in  ar.po  bg.po  bs.po  cs.po  de.po  es.po  fa_IR.po  fr.po  hu.po  id.po  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: bazaar.gresource.xml  bz-addons-dialog.c  bz-app-size-dialog.c  bz-app-tile.c  bz-application.c  bz-apps-page.blp  bz-apps-page.c  bz-appstream-description-render.c  bz-async-texture.c  bz-backend.c  bz-backend.h  bz-browse-widget.c  bz-category-tile.c  bz-content-provider.c  bz-context-tile.c  bz-curated-app-tile.c  bz-decorated-screenshot.c  bz-detailed-app-tile.c  bz-entry-cache-manager.c  bz-entry-group.c  bz-entry-inspector.c  bz-entry.c  bz-env.c  bz-featured-carousel.c  bz-featured-tile.c  bz-flathub-category-section.c  bz-flathub-category.c  bz-flathub-page.c  bz-flathub-state.c  bz-flatpak-entry.c  bz-flatpak-instance.c  bz-full-view.blp  bz-full-view.c  bz-global-progress.c  bz-global-progress.h  bz-global-state.c  bz-gnome-shell-search-provider.c  bz-hardware-support-dialog.c  bz-inspector.blp  bz-inspector.c  (+30 more)
src/gtk/: style.css
